@@ -20,6 +20,8 @@
             - Added  "options.blast-resistant"  to not break in explosions
         - Added piston event functionality (push and pull)
             - Added  "options.cancel-piston-push"  ,  "options.cancel-piston-pull"  , and  "options.piston-breakable"
+        - Added the  "match-states"  section inside the  "block"  section of a block definition which will change the disguised BlockData of a block if its actual BlockData matches all of the nested states
+            - See the custom block  "match"  in demo.yml for more details
 
     Changes:
         - Changed structure of all logged blocks (blocks will not auto update)
